# i-read

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  install.sh  mise.toml  rustfmt.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
src/: args.rs  cmds.rs  exec.rs  main.rs  select.rs  ui.rs
