[package]
name = "i-read"
version = "0.2.0"
authors = ["s2terminal <suzuki.sh@s2terminal.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
regex = "1.5.4"
pulldown-cmark = "0.8.0"
ctrlc = "3.2.1"
console = "0.15.0"

[dependencies.cursive]
version = "0.17.0"
default-features = false
features = ["crossterm-backend"]
