[package]
name = "i-read"
version = "0.2.0"
authors = ["s2terminal <suzuki.sh@s2terminal.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
pulldown-cmark = "0.12"
ctrlc = "3.4"
console = "0.15"

[dependencies.cursive]
version = "0.21"
default-features = false
features = ["crossterm-backend"]
